<resources>
    <string name="app_name">ConstraintsLayout</string>
    <string name="action_settings">Settings</string>
    <string name="hello_text">Hello, Android!</string>
    <string name="image_description">ornamentImage</string>
    <string name="button_clickme">Click me!</string>
    <string name="email_text">Email: </string>
    <string name="email_hint">Enter your email...</string>
</resources>
